# worklog

./: .gitignore  README.md  build_dmg.sh  config.py  make_icon.py  pyproject.toml  setup.py  worklog.example.toml  worklog_launcher.py
launchd/: com.worklog.poller.plist
logger/: activity_poller.py  browser_reader.py  git_enricher.py
summarizer/: daily_summary.py
ui/: app.py
