[project]
name = "worklog"
version = "0.1.0"
description = "Offline PC activity tracker with LLM-powered daily summaries"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pynput>=1.7",
    "pywebview>=5.0",
    "pyobjc",
    "pyobjc-framework-Cocoa",
    "pyobjc-framework-Quartz",
    "pyobjc-framework-ApplicationServices"
]

[project.scripts]
worklog-poll = "logger.activity_poller:run"
worklog-ui   = "ui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["logger"]
